Issue #3164237: Fix Varbase Welcome message not showing up after install compilation after adding and enabling moderation sidebar on the homepage

--- a/modules/varbase_tour/css/theme/tour.admin.theme.css
+++ b/modules/varbase_tour/css/theme/tour.admin.theme.css
@@ -7,13 +7,16 @@
   line-height: 1.2em;
   color: #fff;
 }
+
 .joyride-tip-guide .content-header {
   background-color: #333;
   padding: 1rem 0 0;
 }
+
 .joyride-tip-guide .toolbar-tray-open.toolbar-fixed.toolbar-horizontal {
   padding-top: 4rem !important;
 }
+
 .joyride-tip-guide thead th {
   border: none;
   color: #909090;
@@ -21,6 +24,7 @@
   font-weight: 500;
   font-size: 0.91rem;
 }
+
 .joyride-tip-guide thead th.is-active {
   background: #fff;
   border-bottom: 1px solid #fff;
@@ -28,61 +32,78 @@
   border-left: 1px solid #e6e4df;
   border-right: 1px solid #e6e4df;
 }
+
 .joyride-tip-guide th.is-active > a,
 .joyride-tip-guide th.is-active > a:hover {
   color: #333;
 }
+
 .joyride-tip-guide th > a:hover {
   text-decoration: underline;
 }
+
 .joyride-tip-guide th > a:after,
 .joyride-tip-guide th.is-active > a:after {
   display: none;
 }
+
 .joyride-tip-guide thead > tr {
   border-bottom: 1px solid #e6e4df;
 }
+
 .joyride-tip-guide .is-collapse-enabled .tabs:before,
 .joyride-tip-guide .is-horizontal .tabs:before {
   display: none;
 }
+
 .joyride-tip-guide .button {
   border-radius: 0;
   background-image: none;
   background-color: #f9f9f9;
   text-shadow: none;
+  -webkit-transition: all, 0.2s;
+  -o-transition: all, 0.2s;
   transition: all, 0.2s;
 }
+
 .joyride-tip-guide .button:hover,
 .joyride-tip-guide .button:focus {
   background-color: #ffffff;
   border-color: #008ee6;
   background-image: none;
 }
+
 .joyride-tip-guide .button-action:before {
   display: none;
 }
+
 .joyride-tip-guide .action-links {
   margin: 2em 0;
 }
+
 .joyride-tip-guide .button--primary {
   background: #0071b8;
   border-color: #0071b8;
 }
+
 .joyride-tip-guide .button--primary:hover,
 .joyride-tip-guide .button--primary:focus {
   background-image: none;
   background-color: #1f86c7;
   border-color: #1f86c7;
 }
+
 .joyride-tip-guide .button:focus {
+  -webkit-box-shadow: none;
   box-shadow: none;
   border-color: #68a3cf;
   outline: #c1e0ff solid 2px;
 }
+
 .joyride-tip-guide .button--small:focus {
   outline: none;
 }
+
 .joyride-tip-guide .action-links .button--primary {
   color: #327ebd;
   background: #fff;
@@ -93,17 +114,21 @@
   border-radius: 999px;
   font-weight: 600;
 }
+
 .joyride-tip-guide .action-links .button--primary:hover,
 .joyride-tip-guide .action-links .button--primary:focus {
   color: #fff;
+  -webkit-box-shadow: none;
   box-shadow: none;
   background-image: none;
   background-color: #327ebd;
 }
+
 .joyride-tip-guide .action-links .button--primary:focus {
   border-color: #08639b;
   outline: none;
 }
+
 .joyride-tip-guide .button--small {
   border-color: #cacaca;
   border-radius: 0.2rem;
@@ -111,63 +136,82 @@
   font-weight: 500;
   background: #fff;
 }
+
 .joyride-tip-guide .button--danger {
   text-decoration: none;
   background-color: transparent;
 }
+
 .joyride-tip-guide .button--danger:hover {
   text-decoration: underline;
 }
+
 .joyride-tip-guide select {
   min-height: 28px;
   text-shadow: none;
 }
+
 .joyride-tip-guide label {
   margin: 0 0 0.2em;
 }
+
 .joyride-tip-guide .ui-dialog .ui-dialog-titlebar {
   border-radius: 0;
   background: #333;
 }
+
 .joyride-tip-guide .ui-dialog .ui-widget-content.ui-dialog-buttonpane {
   border-radius: 0;
 }
+
 .joyride-tip-guide .ui-dialog .ui-dialog-titlebar,
 .joyride-tip-guide .ui-dialog {
   outline: none;
 }
+
 .joyride-tip-guide .ui-dialog {
+  -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
 }
+
 .joyride-tip-guide .ui-button-icon-only.ui-dialog-titlebar-close.ui-state-active,
 .joyride-tip-guide .ui-button-icon-only.ui-dialog-titlebar-close.ui-widget-content .ui-state-active {
   background: transparent;
   border-color: transparent;
   color: transparent;
 }
+
 .joyride-tip-guide .ui-dialog .ui-dialog-titlebar-close {
   opacity: 0.5;
+  -webkit-transition: all, 0.2s;
+  -o-transition: all, 0.2s;
   transition: all, 0.2s;
 }
+
 .joyride-tip-guide .ui-dialog .ui-dialog-titlebar-close:hover {
   opacity: 1;
 }
+
 .joyride-tip-guide .messages {
   margin: 1rem 0 1rem 0;
   border-width: 1px 0px 1px 0;
   border-radius: 0;
   background-color: transparent;
+  -webkit-box-shadow: none;
   box-shadow: none;
+  -webkit-background-size: 1.3rem 1.3rem;
   background-size: 1.3rem;
   background-position: 5px 50%;
 }
+
 .joyride-tip-guide .messages--error {
   border-color: #e32700;
 }
+
 .joyride-tip-guide .messages--warning {
   border-color: #e29700;
 }
+
 .joyride-tip-guide .messages--status {
   border-color: #73b355;
 }
-/*# sourceMappingURL=tour.admin.theme.css.map */
